Fix margin spacing at bottom of webpage

--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@ td {
     border: 0.8vw double black;
     border-radius: 1.5vw;
     padding: 0vw 2vw 1vw 3vw;
-    margin: 1vw 14vw 3.8vw 14vw;
+    margin: 1vw 14vw 10vw 14vw;
     text-align: left;
     color: black;
 }
